<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:text="@string/evadresi" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_alignBaseline="@+id/checkBox"
        android:layout_toRightOf="@+id/checkBox"
        android:text="@string/duzenle" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBox"
        android:layout_marginLeft="47dp"
        android:text="@string/adres" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="-49dp"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/adressil" />
</RelativeLayout>